Added dependancy to esaude metadata module as a required module

--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,14 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>esaudemetadata</artifactId>
+			<version>${esaudeMetadataVersion}</version>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
