--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,14 @@
 						<tagNameFormat>@{project.version}</tagNameFormat>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.eluder.coveralls</groupId>
+					<artifactId>coveralls-maven-plugin</artifactId>
+					<version>4.3.0</version>
+					<configuration>
+						<repoToken>yourcoverallsprojectrepositorytoken</repoToken>
+					</configuration>
+				</plugin>
 			</plugins>
 
 		</pluginManagement>
