Added coveralls badge and adjustiment in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ jdk:
  - oraclejdk7
 notifications:
   slack: esaude:fJniHlqocbXRRIkoDY1Ky4dw
+
+after_success:
+- mvn jacoco:report coveralls:report
