--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
 jdk:
+ - oraclejdk8
  - oraclejdk7
+ script:
+   - jdk_switcher use oraclejdk8
+   - jdk_switcher use openjdk7
 notifications:
   slack: esaude:fJniHlqocbXRRIkoDY1Ky4dw
 after_success:
