--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: java
 jdk:
  - oraclejdk8
  - oraclejdk7
- script:
-   - jdk_switcher use oraclejdk8
-   - jdk_switcher use openjdk7
+script: mvn clean install --batch-mode
 notifications:
   slack: esaude:fJniHlqocbXRRIkoDY1Ky4dw
 after_success:
