--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 jdk:
  - oraclejdk8
- - oraclejdk7
+ - openjdk7
 script: mvn clean install --batch-mode
 notifications:
   slack: esaude:fJniHlqocbXRRIkoDY1Ky4dw
