--- a/pom.xml
+++ b/pom.xml
@@ -287,9 +287,8 @@
 					<groupId>org.eluder.coveralls</groupId>
 					<artifactId>coveralls-maven-plugin</artifactId>
 					<version>4.3.0</version>
-					<configuration>
-						<!-- <repoToken>kWCA8AAQxrv31HNRdf1y6xrOhWTL0dFWQ</repoToken> -->
-					</configuration>
+					<!-- <configuration> <repoToken>kWCA8AAQxrv31HNRdf1y6xrOhWTL0dFWQ</repoToken> 
+						</configuration> -->
 				</plugin>
 				<plugin>
 					<groupId>com.mycila</groupId>
@@ -316,15 +315,8 @@
 							<exclude>dist/</exclude>
 						</excludes>
 					</configuration>
-					<executions>
-						<execution>
-							<id>format-license-header</id>
-							<phase>process-sources</phase>
-							<goals>
-								<goal>format</goal>
-							</goals>
-						</execution>
-					</executions>
+					<!-- <executions> <execution> <id>format-license-header</id> <phase>process-sources</phase> 
+						<goals> <goal>format</goal> </goals> </execution> </executions> -->
 				</plugin>
 			</plugins>
 		</pluginManagement>
