--- a/api/pom.xml
+++ b/api/pom.xml
@@ -20,6 +20,13 @@
 			<version>3.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.openmrs.module</groupId>
+			<artifactId>inventorypoc-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
