--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk: oraclejdk8
 #script: mvn clean install --batch-mode
 install: true
-script: ./mvnw clean install
+script: ./mvn clean install
 cache:
   directories:
   - $HOME/.m2
