--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: java
 jdk: oraclejdk8
-#script: mvn clean install --batch-mode
-install: true
-script: ./mvn clean install
+script: mvn clean install
 cache:
   directories:
   - $HOME/.m2
