--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: java
 jdk: oraclejdk8
-script: mvn clean install
-cache:
-  directories:
-  - $HOME/.m2
+script: mvn clean install --batch-mode
 after_success:
 - mvn jacoco:report coveralls:report
 notifications:
