--- a/api/pom.xml
+++ b/api/pom.xml
@@ -18,13 +18,13 @@
 			<artifactId>fixture-factory</artifactId>
 			<version>3.1.0</version>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>org.openmrs.module</groupId>
-			<artifactId>inventorypoc-api</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
-			<scope>provided</scope>
-		</dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>inventorypoc-api</artifactId>
+            <version>1.0.0</version>
+            <type>jar</type>
+        </dependency>
 
 	</dependencies>
 
