--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>pharmacyapi</artifactId>
-		<version>1.0.9-SNAPSHOT</version>
+		<version>1.1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>pharmacyapi-api</artifactId>
@@ -18,6 +18,13 @@
 			<artifactId>fixture-factory</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>inventorypoc-api</artifactId>
+            <version>1.0.0</version>
+            <type>jar</type>
+        </dependency>
 
 	</dependencies>
 
