Removing snapshot dependancies

--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,8 @@
 		<dependency>
 			<groupId>org.openmrs.module</groupId>
 			<artifactId>inventorypoc-api</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0</version>
 			<type>jar</type>
-			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
