added scope provided for inventory module in maven  omod and api xml

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -24,6 +24,7 @@
             <artifactId>inventorypoc-api</artifactId>
             <version>1.0.0</version>
             <type>jar</type>
+            <scope>provided</scope>
         </dependency>
 
 	</dependencies>
