--- a/api/pom.xml
+++ b/api/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.openmrs.module</groupId>
 		<artifactId>pharmacyapi</artifactId>
-		<version>1.1.3</version>
+		<version>1.1.4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>pharmacyapi-api</artifactId>
